--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 layout: archive
 header:
   overlay_color: "#5e616c"
-  overlay_image: "blogAlbumhomepage-banner-1.jpg"
+  overlay_image: "BlogBanner.jpg"
   caption:
-excerpt: "All I'm saying is inside, I had the element of surprise."
+excerpt: "知之真切笃实处即是行，行之明觉精察处即是知。 "
 ---
 
 {% include base_path %}
